; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8712/extr_rtl8712_io.c_r8712_write_port.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8712/extr_rtl8712_io.c_r8712_write_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._adapter = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.intf_hdl }
%struct.intf_hdl = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 (%struct.intf_hdl.0*, i32, i32, i32*)* }
%struct.intf_hdl.0 = type opaque

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @r8712_write_port(%struct._adapter* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct._adapter*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.intf_hdl*, align 8
  store %struct._adapter* %0, %struct._adapter** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load %struct._adapter*, %struct._adapter** %5, align 8
  %11 = getelementptr inbounds %struct._adapter, %struct._adapter* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  store %struct.intf_hdl* %13, %struct.intf_hdl** %9, align 8
  %14 = load %struct.intf_hdl*, %struct.intf_hdl** %9, align 8
  %15 = getelementptr inbounds %struct.intf_hdl, %struct.intf_hdl* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32 (%struct.intf_hdl.0*, i32, i32, i32*)*, i32 (%struct.intf_hdl.0*, i32, i32, i32*)** %16, align 8
  %18 = load %struct.intf_hdl*, %struct.intf_hdl** %9, align 8
  %19 = bitcast %struct.intf_hdl* %18 to %struct.intf_hdl.0*
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 %17(%struct.intf_hdl.0* %19, i32 %20, i32 %21, i32* %22)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
